fix color and spacing

--- a/InterneTaakAfhandeling.Web.Client/src/assets/_mixin-theme.scss
+++ b/InterneTaakAfhandeling.Web.Client/src/assets/_mixin-theme.scss
@@ -3,5 +3,5 @@
   --ita-footer-link-list-column-gap: 4vw;
   --ita-dashboard-tables-column-gap: 4vw;
   --ita-dashboard-tables-column-gap: 4vw;
-  --ita-cv-details-sections-column-gap: 2rem;
+  --ita-cv-details-sections-column-gap: 1rem;
 }
